extension/skin/classic/mac/firebug.css
/* ... */
panelTab[selected="true"] {
    border: 1px solid #A0A0A0;
    border-bottom: none;
    background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.6)) no-repeat 0 0;
    color: inherit;
}

panelTab:not([selected="true"]):hover {
    border: 1px solid #C8C8C8;
    border-bottom: none;
    background: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.2)) no-repeat 0 0;
}

.panelTab-text {
    margin: 0;
}

panelTab[selected="true"] > panelTabMenu {
    margin-left: 3px;
}

#fbPanelBar2-panelTabs > panelTab.watchesPanelTab[selected="true"],
#fbPanelBar2-panelTabs > panelTab.selectorsPanelTab[selected="true"] {
    background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.6)) no-repeat 0 0;
    background-color: rgb(253, 253, 253);
}

#fbPanelBar2-panelTabs > panelTab[selected="true"] {
    background-color: rgb(253, 253, 253);
    border-bottom: none;
}

/************************************************************************************************/

#fbPanelStatus {
    margin: 2px 5px 3px 0;
    padding: 0 5px;
    overflow: hidden;
}

.panelStatusSeparator {
    margin: 0;
    color: #999999;
}

.panelStatusLabel {
    margin: 0;
    padding: 0 4px;
    color: #565656;
}

.menuHeader {
    margin: 2px 16px;
    color: #565656;
}

/************************************************************************************************/

.toolbarbutton,
.toolbar-text-button,
.toolbar-text-menubutton {
    -moz-appearance: none;
    margin-top: 6px;
    margin-bottom: 6px;
    padding: 0 8px;
    min-width: 0;
    max-width: 13em;
    font-weight: bold;
    color: #4a4a4a;
    border: none !important;
    border-radius: 9px;
}

.toolbarbutton {
    font-weight: normal;
}

.toolbar-text-button > .toolbarbutton-text {
    margin-left: 7px;
}

.toolbar-text-button > .toolbarbutton-icon {
    display: none !important;
}

.toolbar-text-button:hover:not([disabled="true"]),
.toolbar-text-menubutton:hover:not([disabled="true"]) ,
.toolbar-text-button[checked="true"]:hover:not([disabled="true"]),
.toolbar-text-menubutton[open="true"]:hover:not([disabled="true"]) {
    box-shadow: 0 1px 2px rgba(0, 0, 0, .5) inset;
    background: rgba(0, 0, 0, 0.2);
}

.toolbar-text-button:hover:active:not([disabled="true"]),
.toolbar-text-menubutton:hover:active:not([disabled="true"]) {
    background: rgba(0, 0, 0, 0.5);
}

.toolbar-text-button:hover:not([disabled="true"]) > .toolbarbutton-text,
.toolbar-text-menubutton:hover:not([disabled="true"]) > .toolbarbutton-menu-dropmarker,
.toolbar-text-menubutton:hover:not([disabled="true"]) > .toolbarbutton-text {
    color: #4a4a4a;
    text-shadow: 0 1px rgba(255, 255, 255, .4);
}

.toolbar-text-button[checked="true"]:not([disabled="true"]),
.toolbar-text-menubutton[open="true"]:not([disabled="true"]) {
    text-shadow: 0 1px rgba(255, 255, 255, .4);
    box-shadow: 0 1px 2px rgba(0, 0, 0, .5) inset;
    background: rgba(0, 0, 0, 0.3);
}

.toolbar-text-menubutton:hover:active:not([disabled="true"]) > .toolbarbutton-text,
.toolbar-text-menubutton[open="true"]:not([disabled="true"]) > .toolbarbutton-text {
    color: #fff;
}

.toolbarbutton > .toolbarbutton-text,
.toolbar-text-button > .toolbarbutton-text {
    color: #4a4a4a;
}

.toolbarbutton[checked="true"] > .toolbarbutton-text,
.toolbar-text-button[checked="true"] > .toolbarbutton-text {
    color: #4a4a4a;
}

.toolbarbutton[disabled=true] > .toolbarbutton-text,
.toolbar-text-button[disabled=true] > .toolbarbutton-text {
    color: graytext;
}

.toolbar-text-button .toolbarbutton-text,
.toolbar-text-menubutton .toolbarbutton-text {
  margin: 0 !important;
}

.toolbar-text-button > .toolbarbutton-text,
.toolbar-text-menubutton > .toolbarbutton-text {
  display: -moz-box !important;
  height: 16px !important;
  padding-top: 1px;
}

.toolbar-text-button > .toolbarbutton-menu-dropmarker,
.toolbar-text-menubutton > .toolbarbutton-menu-dropmarker {
    list-style-image: url("chrome://browser/skin/bookmarks/folderarrow.png");
    width:  16px !important;
    height: 16px !important;
    padding: 5px 5px 4px 3px;
}

.toolbar-text-menubutton:hover:not([disabled="true"]) > .toolbarbutton-menu-dropmarker,
.toolbar-text-menubutton[open="true"]:not([disabled="true"]) > .toolbarbutton-menu-dropmarker  {
    list-style-image: url("chrome://browser/skin/bookmarks/folderarrow-hover.png");
}

.toolbar-text-button[disabled="true"] > .toolbarbutton-menu-dropmarker,
.toolbar-text-menubutton[disabled="true"] > .toolbarbutton-menu-dropmarker {
    list-style-image: none;
}

/********************************************************************************************/

.toolbar-text-menulist {
    margin-top: 0;
    margin-bottom: 0;
    -moz-appearance: none;
    color: #565656;
}

.toolbar-text-menulist > .menulist-label-box {
    -moz-appearance: none;
    border: none;
    padding-left: 8px;
}

.toolbar-text-menulist > .menulist-dropmarker {
    -moz-appearance: none;
    width: 20px;
}

.toolbar-text-menulist > .menulist-dropmarker > .dropmarker-icon {
}

.toolbar-label {
    color: #565656;
}

.useA11y #fbPanelBar1 textbox[focused],
.searchOptionsMenu button:focus {
    -moz-outline-radius: 10px !important;
}

/* issue 2780, moved from upper level firebug.css, RMC */

.toolbar-image-button {
    -moz-appearance: none;
    margin: 0 2px;
    border: none;
    padding: 0 !important;
    background: transparent !important;
}

.toolbar-image-button > .toolbarbutton-icon {
    padding: 0 !important;
}

.toolbar-image-button > .toolbarbutton-text {
    display: none;
}


/************************************************************************************************/
/* Scrollable TabBar + TabList */

#fbPanelBar1-tabBox > panelBarArrowscrollbox > .scrollbutton-up {
    border-right: 2px solid !important;
    -moz-border-right-colors: rgba(0,0,0,0.25) rgba(255, 255, 255, 0.15) !important;
    border-left: 2px solid transparent !important;
}
/* ... */

